# konquest-meta-ads-mcp

./: .env.example  .gitignore  CANONICAL_TOOL_SURFACE.md  Dockerfile  LICENSE  PRODUCT_GAP_REGISTER.md  README.md  RELEASE_BASELINE.md  pyproject.toml  server.json
config/: accounts.yaml  placement_defaults.yaml  thresholds.yaml
docs/: API_QUIRKS.md  README.md  SAFETY.md  TOOLS.md  VAULT_SCHEMA.md
meta_ads_mcp/: __init__.py  __main__.py  premium.py  server.py
meta_ads_mcp/core/: __init__.py  accounts.py  ad_builder.py  ads.py  adsets.py  api.py  audiences.py  auth.py  campaigns.py  catalogs.py  creatives.py  duplication.py  identity.py  images.py  insights.py  naming.py  ops.py  pixels.py  setup.py  targeting.py  utils.py  vault_reader.py  video.py
meta_ads_mcp/engine/: __init__.py  asset_gate.py  audience.py  naming_gate.py  storage.py  tracking_gate.py
meta_ads_mcp/safety/: __init__.py  duplicate_checker.py  file_lock.py  rate_limiter.py  rollback.py  tiers.py
meta_ads_mcp/validators/: __init__.py  compliance.py  creative.py  greek_text.py  operational.py  runner.py  structure.py  tracking.py
tests/: __init__.py  test_ads.py  test_adsets.py  test_campaigns.py  test_convenience_wave.py  test_creatives_wave1.py  test_duplication.py  test_gap_closure.py  test_images.py  test_multi_image.py  test_setup.py  test_targeting_wave1.py
tests/test_safety/: __init__.py  test_tiers.py
tests/test_tools/: __init__.py
tests/test_validators/: __init__.py  test_greek_text.py  test_runner.py
